# anchor

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: synthetic_data.json
src/: index.py.bak
src/models/: cluster.py  data.py  embeddings.py  train.py  training_config.py
src/utils/: clean_data.py  config.py  schema.py  test.py
wandb/run-20250126_164948-4h5l3141/: run-4h5l3141.wandb
wandb/run-20250126_164948-4h5l3141/files/: config.yaml  wandb-metadata.json
wandb/run-20250126_165050-edc3e21p/files/: config.yaml  wandb-metadata.json
wandb/run-20250126_165502-8ac6nh6q/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250126_165952-oau12gr2/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250126_171214-fhsu2s8d/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250126_171642-wd268y4x/: run-wd268y4x.wandb
wandb/run-20250126_171642-wd268y4x/files/: config.yaml  wandb-metadata.json
wandb/run-20250126_171739-vsb4nifs/files/: wandb-metadata.json
